# elm-greenwood

./: .env  .gitattributes  .gitignore  Cargo.toml  Makefile  README.md  all-packages  elm-greenwood.db
elm-deps-rss/: README.md  index.js  package-lock.json  package.json
etc/systemd/: greenwood.service
migrations/2019-04-04-135228_create_packages/: down.sql  up.sql
migrations/2019-07-29-194554_package_format/: up.sql
migrations/2019-07-31-093630_fix_alex-tan_loadable_1_0_0/: down.sql  up.sql
migrations/2019-11-06-175445_fix_showell_elm_data_util_1_0_0/: down.sql  up.sql
src/: db.rs  elm.rs  main.rs  release.rs  rss.rs
src/db/: models.rs  schema.rs
src/elm/: old_format_packages.rs  old_packages.rs  packages.rs
web/: elm.json
web/elm-rss/: README.md  elm.json
web/elm-rss/src/: Rss.elm
web/elm-rss/src/Rss/: Channel.elm  Item.elm
web/elm-rss/tests/: Tests.elm
web/elm-xml/: README.md  elm.json
web/elm-xml/src/: Document.elm  Internal.elm
web/elm-xml/src/Xml/: Decode.elm
web/src/: Help.elm  Icon.elm  Main.elm  Package.elm  Theme.elm
web/static/: index.html  spinner.css
