[package]
name = "greenwood"
version = "1.0.0"
authors = ["Rémi Lefèvre <rlefevre@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.7"
diesel = { version = "1.4.2", features = ["sqlite"] }
dotenv = "0.14.1"
log = "0.4.8"
reqwest = { version = "0.9.19", features = ["rustls-tls"] }
rss = "1.8.0"
serde = { version = "1.0.98", features = ["derive"] }
serde_json = "1.0.40"
syslog = "4.0.1"
warp = "0.1.18"
